Fix missing background image

--- a/_sass/so-simple/_global.scss
+++ b/_sass/so-simple/_global.scss
@@ -81,7 +81,7 @@
 }
 
 .cox-header {
-  background-image: url("/images/line-chart-bg.png");
+  background-image: url({{ '/images/line-chart-bg.png' | relative_url }});
   min-height: 150px;
   display: flex;
   flex-direction: column;
